--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,1 +1,1 @@
-<meta name="google-site-verification" content="kEPM3yJVBxP9zsnRCpvxKgoBMKQyzDHiIrkqL8kIXJM" />
+<!-- <meta name="google-site-verification" content="kEPM3yJVBxP9zsnRCpvxKgoBMKQyzDHiIrkqL8kIXJM" /> -->
